[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/units/worker/state/working.gd" type="Script" id=1]
[ext_resource path="res://src/units/worker/Worker.gd" type="Script" id=2]
[ext_resource path="res://res/sprites/units/gilet_jaune-Sheet.png" type="Texture" id=3]
[ext_resource path="res://src/units/worker/ui/unit_selection.gd" type="Script" id=4]
[ext_resource path="res://src/units/worker/state/morale.gd" type="Script" id=5]
[ext_resource path="res://src/units/worker/resource_detector.gd" type="Script" id=6]
[ext_resource path="res://res/sprites/units/worker-Sheet.png" type="Texture" id=7]
[ext_resource path="res://src/units/worker/ui/gather_label.gd" type="Script" id=8]
[ext_resource path="res://res/sprites/ui/morale_bar_underr.png" type="Texture" id=9]
[ext_resource path="res://res/sprites/ui/morale_bar_progress.png" type="Texture" id=10]
[ext_resource path="res://src/units/worker/macrabron_detector.gd" type="Script" id=11]
[ext_resource path="res://src/units/worker/state/fighting.gd" type="Script" id=12]
[ext_resource path="res://res/audio/sounds/le sang de leurs morts.wav" type="AudioStream" id=13]
[ext_resource path="res://res/audio/sounds/antho jvais tniker salo.wav" type="AudioStream" id=14]

[sub_resource type="CapsuleShape2D" id=15]
radius = 22.19
height = 27.7084

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 11 ), SubResource( 12 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "gilet",
"speed": 5.0
} ]

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -24, -54 ), Vector2( -24, -74 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=18]
radius = 114.672

[sub_resource type="CircleShape2D" id=19]
radius = 229.547

[node name="KinematicBody2D" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 2 )
speed = 100.0

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 1.03055, 2.97876 )
shape = SubResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
frame = 2
speed_scale = 0.75
playing = true
script = ExtResource( 4 )

[node name="GatherLabel" type="Label" parent="."]
visible = false
margin_left = -24.0
margin_top = -74.0
margin_right = 25.0
margin_bottom = -60.0
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "+5 food"
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation" type="AnimationPlayer" parent="GatherLabel"]
anims/Slidisappear = SubResource( 17 )

[node name="GatherTimer" type="Timer" parent="GatherLabel"]
script = ExtResource( 1 )

[node name="ResourceDetector" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResourceDetector"]
shape = SubResource( 18 )

[node name="MacrabronDetector" type="Area2D" parent="."]
input_pickable = false
monitorable = false
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MacrabronDetector"]
position = Vector2( -1.68457, -1.06427 )
shape = SubResource( 19 )
disabled = true

[node name="GiletSeekSound" type="AudioStreamPlayer2D" parent="MacrabronDetector"]
stream = ExtResource( 14 )
bus = "Sounds"

[node name="MoraleBar" type="TextureProgress" parent="."]
margin_left = -17.4319
margin_top = -25.2137
margin_right = 40.5681
margin_bottom = -19.2137
rect_scale = Vector2( 0.6, 0.6 )
value = 50.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IdleMoraleTimer" type="Timer" parent="MoraleBar"]

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -28.6352
margin_top = -35.4554
margin_right = 29.3648
margin_bottom = -29.4554
value = 100.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )
tint_progress = Color( 0.8, 0.160784, 0.160784, 1 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTimer" type="Timer" parent="HealthBar"]

[node name="KillSound" type="AudioStreamPlayer2D" parent="HealthBar"]
stream = ExtResource( 13 )
volume_db = 11.794
bus = "Sounds"
[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="gather_ticked" from="GatherLabel/GatherTimer" to="GatherLabel" method="_on_GatherTimer_gather_ticked"]
[connection signal="gather_ticked" from="GatherLabel/GatherTimer" to="MoraleBar" method="_on_GatherTimer_gather_ticked"]
[connection signal="timeout" from="GatherLabel/GatherTimer" to="GatherLabel/GatherTimer" method="_on_CollectTimer_timeout"]
[connection signal="body_entered" from="ResourceDetector" to="ResourceDetector" method="_on_ResourceDetector_body_entered"]
[connection signal="body_exited" from="ResourceDetector" to="ResourceDetector" method="_on_ResourceDetector_body_exited"]
[connection signal="detected" from="ResourceDetector" to="." method="_on_ResourceDetector_detected"]
[connection signal="body_entered" from="MacrabronDetector" to="MacrabronDetector" method="_on_MacrabronDetector_body_entered"]
[connection signal="body_exited" from="MacrabronDetector" to="MacrabronDetector" method="_on_MacrabronDetector_body_exited"]
[connection signal="detected" from="MacrabronDetector" to="." method="_on_MacrabronDetector_detected"]
[connection signal="timeout" from="MoraleBar/IdleMoraleTimer" to="MoraleBar" method="_on_IdleMoraleTimer_timeout"]
[connection signal="death" from="HealthBar" to="." method="_on_HealthBar_death"]
[connection signal="killed" from="HealthBar" to="." method="_on_HealthBar_killed"]
[connection signal="lost_health" from="HealthBar" to="MoraleBar" method="_on_HealthBar_lost_health"]
[connection signal="timeout" from="HealthBar/AttackTimer" to="HealthBar" method="_on_AttackTimer_timeout"]
